lizza commit.